Fixed horizontal scroll bar

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ Colors:
 */
 
 html, body{
-  width: 100%;
   height: 100%;
   background-color: #EAE7DC;
 }
@@ -59,14 +58,6 @@ img.largePhoto{
   height: 15em;
 }
 
-.rotate90 {
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
-
 h1{
   font-family: 'Manjari', sans-serif;
   color: #E85A4F;
@@ -107,7 +98,6 @@ a{
 .btn:hover{
   background: #eee;
 }
-
 
 .row{
   display: none;
